<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hadrian.masas.Myactivity"
    tools:showIn="@layout/activity_my"
    android:weightSum="1">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_entrada"
        android:id="@+id/textView_1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/show_entrada"
        android:hint="@string/valor_entrada"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView_1"
        android:layout_alignBottom="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simbolo_entrada"
        android:hint="@string/simbolo_entrada"
        android:layout_below="@+id/show_entrada"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numero_entrada"
        android:hint="@string/numero_entrada"
        android:inputType="number"
        android:layout_alignBottom="@+id/simbolo_entrada"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:id="@+id/button_add"
        android:onClick="add_entrada"
        android:layout_below="@+id/show_entrada"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_in"
        android:id="@+id/button"
        android:onClick="reset_in"
        android:layout_alignTop="@+id/textView_1"
        android:layout_alignRight="@+id/textView_1"
        android:layout_alignEnd="@+id/textView_1" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/button_add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="80dp"
        android:id="@+id/space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_salida"
        android:id="@+id/textView_2"
        android:layout_alignBottom="@+id/space"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/show_salida"
        android:layout_alignEnd="@+id/show_salida" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/show_salida"
        android:hint="@string/valor_salida"
        android:layout_below="@+id/textView_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simbolo_salida"
        android:hint="@string/simbolo_salida"
        android:layout_alignTop="@+id/numero_salida"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numero_salida"
        android:hint="@string/numero_salida"
        android:inputType="number"
        android:layout_below="@+id/button_2"
        android:layout_alignLeft="@+id/numero_entrada"
        android:layout_alignStart="@+id/numero_entrada" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:id="@+id/button_add_2"
        android:onClick="add_salida"
        android:layout_below="@+id/button_2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/button_2"
        android:layout_alignStart="@+id/button_2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_in"
        android:id="@+id/button_2"
        android:onClick="reset_out"
        android:layout_alignTop="@+id/textView_2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/resultado"
        android:id="@+id/textView"
        android:layout_below="@+id/button_add_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="108dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:onClick="calcular"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Etiqueta_resultado"
        android:id="@+id/textView2"
        android:layout_above="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
